--- a/TripPlanner/TripPlanner.csproj
+++ b/TripPlanner/TripPlanner.csproj
@@ -68,6 +68,9 @@
 		<PackageReference Include="CommunityToolkit.Maui" Version="11.1.1" />
 		<PackageReference Include="Microsoft.Data.Sqlite.Core" Version="8.0.8" />
 		<PackageReference Include="SQLitePCLRaw.bundle_green" Version="2.1.10" />
+		<PackageReference Include="Syncfusion.Maui.Cards" Version="31.2.16" />
+		<PackageReference Include="Syncfusion.Maui.Expander" Version="31.2.16" />
+		<PackageReference Include="Syncfusion.Maui.ListView" Version="31.2.16" />
 		<PackageReference Include="Syncfusion.Maui.Toolkit" Version="1.0.7" />
 	</ItemGroup>
 
