--- a/TripPlanner/TripPlanner.csproj
+++ b/TripPlanner/TripPlanner.csproj
@@ -67,6 +67,7 @@
 		<PackageReference Include="CommunityToolkit.Mvvm" Version="8.4.0" />
 		<PackageReference Include="CommunityToolkit.Maui" Version="13.0.0" />
 		<PackageReference Include="Microsoft.Data.Sqlite.Core" Version="10.0.1" />
+		<PackageReference Include="sqlite-net-pcl" Version="1.9.172" />
 		<PackageReference Include="SQLitePCLRaw.bundle_green" Version="2.1.11" />
 		<PackageReference Include="Syncfusion.Maui.Cards" Version="32.1.22" />
 		<PackageReference Include="Syncfusion.Maui.DataForm" Version="32.1.22" />
